# transition-admissibility-gate

./: CHANGELOG.md  CLAIM_BOUNDARY.md  LICENSE  README.md  RECEIPT.md  pyproject.toml
examples/: approve_invoice.py  deny_invoice_tamper.py
src/tagate/: __init__.py  admissibility.py  audit.py  authority.py  canonical.py  commit_gate.py  decision_record.py  errors.py  nonce_ledger.py  state_store.py
tests/: conftest.py  test_allow_valid_transition.py  test_deny_bad_signature.py  test_deny_inadmissible_transition.py  test_deny_missing_record.py  test_deny_nonce_reuse.py  test_deny_payload_tamper.py  test_deny_unauthorised_scope.py  test_state_store_not_mutated_on_deny.py
